Make CI JDK17 compatible (#6004)